deploy/overlays/prod/alpha/provider-admin-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doro-provider-admin
  labels:
    app.kubernetes.io/name: doro-provider-admin
