deploy/overlays/prod/alpha/provider-admin-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: provider-admin-gateway
  labels:
    app.kubernetes.io/name: provider-admin-gateway
    app.kubernetes.io/part-of: doro-erp-admin
spec:
  gatewayClassName: doro-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: provider-admin-alb-config
  listeners:
    - name: https
      hostname: admin.doro.minseok.click
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: provider-admin-route
  labels:
    app.kubernetes.io/name: provider-admin-route
    app.kubernetes.io/part-of: doro-erp-admin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: provider-admin-gateway
      sectionName: https
  hostnames:
    - admin.doro.minseok.click
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/provider
      backendRefs:
        - group: ""
          kind: Service
          name: provider-admin-edge-api
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: provider-admin
          port: 8080
          weight: 1
