deploy/overlays/prod/alpha/provider-admin-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-provider-admin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: provider-admin
  policyTypes:
    - Ingress
    - Egress
